# solution-Marko_Subasic

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_create_tickets_table.py
docs/: openapi.json  redoc-static.html
scripts/: export_openapi.py
src/tickethub/: auth.py  cache.py  config.py  database.py  dummyjson.py  main.py  models.py  schemas.py  sync.py
src/tickethub/routers/: auth.py  health.py  stats.py  tickets.py
tests/: conftest.py  test_auth.py  test_stats.py  test_sync.py  test_tickets_api.py
